plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'com.github.node-gradle.node' version '7.0.1'
//	id "com.moowork.node" version "1.3.1"
}

group = 'com.idfc.bootcamp'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.flywaydb:flyway-core'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.2'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	compileOnly 'org.projectlombok:lombok:1.18.20'
	annotationProcessor 'org.projectlombok:lombok:1.18.20'
	implementation 'org.modelmapper:modelmapper:3.1.1'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-core:3.12.4' // Replace with the latest version available
}

tasks.named('test') {
	useJUnitPlatform()
}


node {
	download = true
	version="18.12.1"
	npmVersion="9.2.0"
	// identify working directory in project
	workDir = file("${project.projectDir}/src/main/frontend-ui/bookstoreapp/nodejs")
	// NPM work directory
	npmWorkDir = file("${project.projectDir}/src/main/frontend-ui/bookstoreapp/npm")
	// node modules directory
	//nodeModulesDir = file("${project.projectDir}/src/main/frontend-ui/bookstoreapp/node_modules")
}

task appNpmInstall(type: NpmTask){
	description = " read packge.json and install all jars"
	workingDir = file("${project.projectDir}/src/main/frontend-ui/bookstoreapp")
	args =["install"]
}

task appNpmBuild(type: NpmTask){
	description = "Builds applciation for your frontend "
	workingDir = file("${project.projectDir}/src/main/frontend-ui/bookstoreapp")
	args =["run", "build"]
}

/*task appNpmInstall(type: NpmTask){
	description = "Installs the NPM dependencies"
	workingDir = file("${project.projectDir}/src/main/frontend-ui/bookstoreapp")
	args =["install"]
}*/

task copyToFrontend(type: Copy){
	from "${project.projectDir}/src/main/frontend-ui/bookstoreapp/build/"
	into "${project.projectDir}/build/resources/main/static"
}

appNpmBuild.dependsOn appNpmInstall
copyToFrontend.dependsOn appNpmBuild
compileJava.dependsOn copyToFrontend